@@ -1,3 +1,8 @@
+2014-01-09  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	PR rtl-optimization/59137
+	* gcc.target/mips/pr59137.c: New test.
+
 2014-01-09  Richard Biener  <rguenther@suse.de>
 
 	Backport from mainline
