@@ -1,5 +1,12 @@
 2014-01-09  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	PR rtl-optimization/59137
+	* reorg.c (steal_delay_list_from_target): Call update_block for
+	elided insns.
+	(steal_delay_list_from_fallthrough, relax_delay_slots): Likewise.
+
+2014-01-09  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	Revert:
 	2012-10-07  Richard Sandiford  <rdsandiford@googlemail.com>
 
